# loom

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  loom-policy.toml.example  rust-toolchain.toml
.claude/: pipeline.yml
.github/workflows/: ci.yml
docs/: inspiration.md  v02-growth-path.md
src/: artifact.rs  atomic_write.rs  cli.rs  config.rs  delivery.rs  discovery.rs  dispatch.rs  feature_id.rs  iteration.rs  journal.rs  lib.rs  main.rs  recovery.rs  spawn_env.rs  state.rs  verdict.rs  worker.rs  worker_claude_code.rs
tests/: recursion_guard_test.rs  scope_guard_test.rs  spawn_env_canonical.rs  spawn_env_test.rs  worker_claude_code_test.rs
tests/e2e/: run_journal_recovery_test.rs  sigint_e2e_test.rs  sso_feature_integration_test.rs  sso_feature_stub_test.rs  verdict_multi_cycle_test.rs  verdict_saturation_test.rs  worktree_cleanup_test.rs  worktree_propagation_test.rs
